@@ -71,6 +71,10 @@ CVS code -
   do_para_begin(), do_para_end()
 	- Maintain current_y's value when moving up or down lines so
 	  that smooth scrolling works correctly. (DLR)
+  breakable(), break_line()
+	- Make goal a ssize_t instead of an int, since fill is now a
+	  ssize_t, and the position at which a line is broken can be
+	  greater than COLS. (DLR)
 - nano.h:
 	- Add WIDTH_OF_TAB #define, containing the default width of a
 	  tab. (DLR)
